# SPDX-License-Identifier: PMPL-1.0-or-later
[package]
name = "futharkiser"
version = "0.1.0"
edition = "2024"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Compile annotated array operations to GPU kernels via Futhark without touching CUDA"
license-file = "LICENSE"
repository = "https://github.com/hyperpolymath/futharkiser"
keywords = ["futhark", "gpu", "cuda", "opencl", "acceleration"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "2"
handlebars = "6"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
